--- a/FriGo/FriGo.Api/FriGo.Api.csproj
+++ b/FriGo/FriGo.Api/FriGo.Api.csproj
@@ -227,9 +227,6 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\IngredientController.cs" />
     <Compile Include="Controllers\IngredientQuantityController.cs" />
-    <Compile Include="DAL\GenericRepository.cs" />
-    <Compile Include="DAL\UnitOfWork.cs" />
-    <Compile Include="FrigoContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -287,17 +284,25 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FriGo.Core\FriGo.Core.csproj">
-      <Project>{ae34ca1e-e500-41e4-8ea3-5de7e3a57b11}</Project>
-      <Name>FriGo.Core</Name>
+    <ProjectReference Include="..\FriGo.DAL\FriGo.DAL.csproj">
+      <Project>{b6e7b2f0-5668-4778-a12c-200f5a58e6f7}</Project>
+      <Name>FriGo.DAL</Name>
     </ProjectReference>
     <ProjectReference Include="..\FriGo.Db\FriGo.Db.csproj">
       <Project>{677656d1-a4e1-4236-a438-e74b3104d001}</Project>
       <Name>FriGo.Db</Name>
     </ProjectReference>
     <ProjectReference Include="..\FriGo.Interfaces\FriGo.Interfaces.csproj">
-      <Project>{1140e30d-87f0-4be2-afae-45d1466fed0d}</Project>
+      <Project>{cd679956-2f13-4401-8144-55d0a7254c98}</Project>
       <Name>FriGo.Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FriGo.ServiceInterfaces\FriGo.ServiceInterfaces.csproj">
+      <Project>{1140e30d-87f0-4be2-afae-45d1466fed0d}</Project>
+      <Name>FriGo.ServiceInterfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FriGo.Services\FriGo.Services.csproj">
+      <Project>{ae34ca1e-e500-41e4-8ea3-5de7e3a57b11}</Project>
+      <Name>FriGo.Services</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
