--- a/FriGo/FriGo.ServiceInterfaces/FriGo.ServiceInterfaces.csproj
+++ b/FriGo/FriGo.ServiceInterfaces/FriGo.ServiceInterfaces.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CD679956-2F13-4401-8144-55D0A7254C98}</ProjectGuid>
+    <ProjectGuid>{1140E30D-87F0-4BE2-AFAE-45D1466FED0D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FriGo.Interfaces</RootNamespace>
-    <AssemblyName>FriGo.Interfaces</AssemblyName>
+    <RootNamespace>FriGo.ServiceInterfaces</RootNamespace>
+    <AssemblyName>FriGo.ServiceInterfaces</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,13 +34,17 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dependencies\IDependency.cs" />
-    <Compile Include="Dependencies\ILifeTimeDependency.cs" />
-    <Compile Include="Dependencies\IMatchingLifeTimeDependency.cs" />
-    <Compile Include="Dependencies\IRequestDependency.cs" />
-    <Compile Include="Dependencies\ISelfRequestDependency.cs" />
-    <Compile Include="Dependencies\ISingleInstanceDependency.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ICrudService.cs" />
+    <Compile Include="IIngredientQuantityService.cs" />
+    <Compile Include="IIngredientService.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\FriGo.Db\FriGo.Db.csproj">
+      <Project>{677656d1-a4e1-4236-a438-e74b3104d001}</Project>
+      <Name>FriGo.Db</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
