--- a/FriGo/FriGo.Api/packages.config
+++ b/FriGo/FriGo.Api/packages.config
@@ -5,6 +5,8 @@
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net46" />
   <package id="bootstrap" version="3.0.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="FluentValidation" version="6.4.0" targetFramework="net46" />
+  <package id="FluentValidation.WebApi" version="6.4.0" targetFramework="net46" />
   <package id="jQuery" version="3.1.1" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net46" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net46" />
