--- a/FriGo/FriGo.Api/packages.config
+++ b/FriGo/FriGo.Api/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
   <package id="Autofac" version="4.4.0" targetFramework="net46" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net46" />
+  <package id="AutoMapper" version="6.0.1" targetFramework="net46" />
   <package id="bootstrap" version="3.0.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="FluentValidation" version="6.4.0" targetFramework="net46" />
@@ -48,6 +49,7 @@
   <package id="Respond" version="1.2.0" targetFramework="net46" />
   <package id="Swashbuckle" version="5.5.3" targetFramework="net46" />
   <package id="Swashbuckle.Core" version="5.5.3" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net46" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
