--- a/FriGo/FriGo.Db/FriGo.Db.csproj
+++ b/FriGo/FriGo.Db/FriGo.Db.csproj
@@ -72,6 +72,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\Ingredient\CreateIngredient.cs" />
+    <Compile Include="DTO\DtoEntity.cs" />
+    <Compile Include="DTO\Ingredient\EditIngredient.cs" />
+    <Compile Include="DTO\RecipeStub.cs" />
+    <Compile Include="DTO\UserStub.cs" />
     <Compile Include="EntityConfigurations\IngredientQuantityConfiguration.cs" />
     <Compile Include="EntityConfigurations\IngredientConfiguration.cs" />
     <Compile Include="FrigoContext.cs" />
