--- a/FriGo/FriGo.Db/FriGo.Db.csproj
+++ b/FriGo/FriGo.Db/FriGo.Db.csproj
@@ -72,6 +72,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\CreateUnit.cs" />
     <Compile Include="DTO\Ingredient\CreateIngredient.cs" />
     <Compile Include="DTO\DtoEntity.cs" />
     <Compile Include="DTO\Ingredient\EditIngredient.cs" />
@@ -87,11 +88,11 @@
     <Compile Include="Models\Social\Comment.cs" />
     <Compile Include="Models\Entity.cs" />
     <Compile Include="Models\Error.cs" />
-    <Compile Include="Models\Ingredients\Ingredient.cs" />
-    <Compile Include="Models\Ingredients\IngredientQuantity.cs" />
-    <Compile Include="Models\Ingredients\Unit.cs" />
-    <Compile Include="Models\Recipes\Recipe.cs" />
-    <Compile Include="Models\Recipes\Tag.cs" />
+    <Compile Include="Models\Ingredient\Ingredient.cs" />
+    <Compile Include="Models\Ingredient\IngredientQuantity.cs" />
+    <Compile Include="Models\Ingredient\Unit.cs" />
+    <Compile Include="Models\Recipe\Recipe.cs" />
+    <Compile Include="Models\Recipe\Tag.cs" />
     <Compile Include="ModelValidators\IngredientQuantityValidator.cs" />
     <Compile Include="ModelValidators\IngredientValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -118,7 +119,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="DTO\Unit\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
