add tag interface

--- a/FriGo/FriGo.Api/FriGo.Api.csproj
+++ b/FriGo/FriGo.Api/FriGo.Api.csproj
@@ -235,6 +235,7 @@
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\TagController.cs" />
     <Compile Include="Controllers\UnitController.cs" />
     <Compile Include="Controllers\IngredientController.cs" />
     <Compile Include="Controllers\IngredientQuantityController.cs" />
