api interface fixes

--- a/FriGo/FriGo.Db/FriGo.Db.csproj
+++ b/FriGo/FriGo.Db/FriGo.Db.csproj
@@ -73,21 +73,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO\Account\EditAccount.cs" />
-    <Compile Include="DTO\IngredientQuantity\CreateIngredientQuantity.cs" />
-    <Compile Include="DTO\IngredientQuantity\EditIngredientQuantity.cs" />
-    <Compile Include="DTO\Recipe\CreateRecipe.cs" />
-    <Compile Include="DTO\Recipe\RateRecipe.cs" />
-    <Compile Include="DTO\Recipe\RecipeDto.cs" />
+    <Compile Include="DTO\IngredientQuantities\CreateIngredientQuantity.cs" />
+    <Compile Include="DTO\IngredientQuantities\EditIngredientQuantity.cs" />
+    <Compile Include="DTO\Recipes\CreateRecipe.cs" />
+    <Compile Include="DTO\Recipes\RateRecipe.cs" />
+    <Compile Include="DTO\Recipes\RecipeDto.cs" />
+    <Compile Include="DTO\Social\CommentStub.cs" />
     <Compile Include="DTO\Social\EditComment.cs" />
     <Compile Include="DTO\Social\CreateComment.cs" />
     <Compile Include="DTO\Social\CommentDto.cs" />
     <Compile Include="DTO\Social\UserDto.cs" />
-    <Compile Include="DTO\Unit\CreateUnit.cs" />
-    <Compile Include="DTO\Ingredient\CreateIngredient.cs" />
+    <Compile Include="DTO\Units\CreateUnit.cs" />
+    <Compile Include="DTO\Ingredients\CreateIngredient.cs" />
     <Compile Include="DTO\DtoEntity.cs" />
-    <Compile Include="DTO\Ingredient\EditIngredient.cs" />
-    <Compile Include="DTO\Recipe\RecipeStub.cs" />
-    <Compile Include="DTO\Unit\EditUnit.cs" />
+    <Compile Include="DTO\Ingredients\EditIngredient.cs" />
+    <Compile Include="DTO\Recipes\RecipeStub.cs" />
+    <Compile Include="DTO\Units\EditUnit.cs" />
     <Compile Include="DTO\Account\UserStub.cs" />
     <Compile Include="EntityConfigurations\IngredientQuantityConfiguration.cs" />
     <Compile Include="EntityConfigurations\IngredientConfiguration.cs" />
@@ -99,11 +100,11 @@
     <Compile Include="Models\Social\Comment.cs" />
     <Compile Include="Models\Entity.cs" />
     <Compile Include="Models\Error.cs" />
-    <Compile Include="Models\Ingredient\Ingredient.cs" />
-    <Compile Include="Models\Ingredient\IngredientQuantity.cs" />
-    <Compile Include="Models\Ingredient\Unit.cs" />
-    <Compile Include="Models\Recipe\Recipe.cs" />
-    <Compile Include="Models\Recipe\Tag.cs" />
+    <Compile Include="Models\Ingredients\Ingredient.cs" />
+    <Compile Include="Models\Ingredients\IngredientQuantity.cs" />
+    <Compile Include="Models\Ingredients\Unit.cs" />
+    <Compile Include="Models\Recipes\Recipe.cs" />
+    <Compile Include="Models\Recipes\Tag.cs" />
     <Compile Include="ModelValidators\IngredientQuantityValidator.cs" />
     <Compile Include="ModelValidators\IngredientValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
