add full Ingredient logic as an example

--- a/FriGo/FriGo.Db/FriGo.Db.csproj
+++ b/FriGo/FriGo.Db/FriGo.Db.csproj
@@ -75,6 +75,7 @@
     <Compile Include="DTO\Account\EditAccount.cs" />
     <Compile Include="DTO\IngredientQuantities\CreateIngredientQuantity.cs" />
     <Compile Include="DTO\IngredientQuantities\EditIngredientQuantity.cs" />
+    <Compile Include="DTO\Ingredients\IngredientDto.cs" />
     <Compile Include="DTO\Recipes\CreateRecipe.cs" />
     <Compile Include="DTO\Recipes\RateRecipe.cs" />
     <Compile Include="DTO\Recipes\RecipeDto.cs" />
@@ -114,7 +115,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SeedLists\IngredientList.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -132,7 +132,10 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="SeedLists\UnitList.txt" />
+    <Content Include="SeedLists\IngredientList.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
