Fix csproj files to include missing files

--- a/FriGo/FriGo.Services/FriGo.Services.csproj
+++ b/FriGo/FriGo.Services/FriGo.Services.csproj
@@ -37,6 +37,8 @@
     <Compile Include="BaseService.cs" />
     <Compile Include="CrudService.cs" />
     <Compile Include="IngredientQuantityService.cs" />
+    <Compile Include="RecipeService.cs" />
+    <Compile Include="SearchEngine.cs" />
     <Compile Include="UnitService.cs" />
     <Compile Include="IngredientService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
