--- a/FriGo/FriGo.ServiceInterfaces/FriGo.ServiceInterfaces.csproj
+++ b/FriGo/FriGo.ServiceInterfaces/FriGo.ServiceInterfaces.csproj
@@ -34,6 +34,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IRecipeService.cs" />
+    <Compile Include="ISearchEngine.cs" />
     <Compile Include="IUnitService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ICrudService.cs" />
