--- a/FriGo/FriGo.Api/FriGo.Api.csproj
+++ b/FriGo/FriGo.Api/FriGo.Api.csproj
@@ -257,6 +257,7 @@
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\UnitController.cs" />
     <Compile Include="Controllers\IngredientController.cs" />
+    <Compile Include="Filters\AuthTokenOperation.cs" />
     <Compile Include="Filters\ValidateModelStateFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
