--- a/FriGo/FriGo.Db/packages.config
+++ b/FriGo/FriGo.Db/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="6.0.2" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="FluentValidation" version="6.2.1.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net46" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net46" />
